Fixed issue on number input where increase and decrease icons/buttons were showing up on firefox

--- a/tailwind.css
+++ b/tailwind.css
@@ -3,6 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    input[type='number']::-webkit-outer-spin-button,
+    input[type='number']::-webkit-inner-spin-button,
+    input[type='number'] {
+        -webkit-appearance: none;
+        margin: 0;
+        -moz-appearance: textfield !important;
+    }
+}
+
 input:checked + div {
     @apply border-orange-600;
 }
@@ -10,11 +20,12 @@ input:checked + div svg {
     @apply block;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
+/*input[type="number"]::-webkit-outer-spin-button,*/
+/*input[type="number"]::-webkit-inner-spin-button {*/
+/*    -webkit-appearance: none;*/
+/*    margin: 0;*/
+/*    -moz-appearance: textfield !important;*/
+/*}*/
 
 #arrow,
 #arrow::before {
